# miragen

./: .gitignore  Dockerfile  Dockerfile.example  LICENSE  README.md  compose.example.yml  compose.yml  example.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  pypi.yml  security.yml  test.yml
docs/: executor-tier.md
docs/design/: codex-auth.md  executor-tier-refinement.md  host-leash.md  managed-schedules.md  mirarun-substrate-contracts.md  run-records-and-approvals.md  structured-interventions.md
miragen/: __init__.py  app.py  approval.py  broker.py  cli.py  edf.py  executor.py  factory.py  load.py  models.py  peer.py  runs.py  schedules.py
miragen/executor/: __init__.py  base.py  claude_code.py  codex.py  leash.py  sink.py  spawn.py
tests/: test_app.py  test_approval.py  test_broker.py  test_edf.py  test_events_cursor.py  test_executor.py  test_executor_adapters.py  test_factory.py  test_interpolation.py  test_interventions.py  test_launch_api.py  test_leash.py  test_load.py  test_models.py  test_multi_repo.py  test_peer.py  test_runs.py  test_schedules.py  test_telemetry.py
