[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miragen"
version = "0.1.4"
description = "YAML-defined agent orchestration framework powered by PydanticAI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "ieepirzy", email = "nervy_colder_1m@icloud.com" },
]
keywords = ["ai", "agents", "pydantic-ai", "llm", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic-ai>=1.0",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[project.urls]
Homepage = "https://github.com/ieepirzy/miragen"
Repository = "https://github.com/ieepirzy/miragen"
Issues = "https://github.com/ieepirzy/miragen/issues"
Documentation = "https://github.com/ieepirzy/miragen/blob/main/README.md"

[project.scripts]
miragen = "miragen.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["miragen"]
